testdata/golden/sema/valid/extern_int_additional_method.fmt
// scenario: extern<int> adds a new non-stdlib method
extern<int> {
    fn is_positive(self: int) -> bool {
        return self > 0;
    }
}

fn check_number(n: int) -> bool {
    return n.is_positive();
}
